syntax = "proto3";

package chef.automate.domain.user_settings.service;
option go_package = "github.com/chef/automate/api/interservice/user_settings";
import "google/protobuf/empty.proto";


// UserSettings allows accessing of user settings
service UserSettingsService {
	rpc GetUserSettings(GetUserSettingsRequest) returns (GetUserSettingsResponse) {};
	rpc PutUserSettings(PutUserSettingsRequest) returns (PutUserSettingsResponse) {};
	rpc DeleteUserSettings(DeleteUserSettingsRequest) returns (google.protobuf.Empty){};
}

message User {
	int32 id = 1;
	string name = 2;
	string connector = 3;
}

message GetUserSettingsRequest{
	User user = 1;
}

message PutUserSettingsRequest{
	User user = 1;
	map<string, UserSettingValue> settings = 2;
}

message DeleteUserSettingsRequest{
	User user = 1;
}

message GetUserSettingsResponse {
	User user = 1;
	map<string, UserSettingValue> settings = 2;
}

message PutUserSettingsResponse {
	User user = 1;
}

message UserSettingValue {
	string default_value = 1;
	string value = 2;
	bool enabled = 3;
}